scrollbar fixed

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -13,7 +13,7 @@
 
 
 #formcont{
-  margin-top: 34px;
+
   margin-right: 0;
   margin-left: 0;
     background: url('/static/images/restaurant.png');
